kubernetes/micro-collector-deployment-0.0.4.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: micro-collector-new
  labels:
    project: pdp
    app: micro-collector-new
spec:
  replicas: 2
  selector:
    matchLabels:
      app: micro-collector-new
  template:
    metadata:
      labels:
        project: pdp
        app: micro-collector-new
    spec:
      containers:
        - name: micro-collector
          image: olehfliurkevych/micro-collector:0.0.4
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: service-port
            failureThreshold: 3
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 10
          ports:
            - name: service-port
              containerPort: 8080
