kubernetes/micro-collector-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.network/kubectl-recipient: "true"
    io.kompose.service: micro-collector
  name: micro-collector
spec:
  containers:
    - env:
        - name: EUREKA_HOST
          value: eureka
        - name: EUREKA_PORT
          value: "8761"
        - name: RABBITMQ_GET_REMOVE_ALL_FIX_DELAY
          value: "15000"
      image: micro-collector
      livenessProbe:
        exec:
          command:
            - curl -f http://localhost:8080/actuator/health || exit 1
        failureThreshold: 3
        initialDelaySeconds: 60
        periodSeconds: 30
        timeoutSeconds: 10
      name: collector
      ports:
        - containerPort: 8080
      resources: {}
  restartPolicy: OnFailure
status: {}
