kubernetes/micro-recipient-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: micro-recipient
  labels:
    project: pdp
    app: micro-recipient
spec:
  replicas: 1
  selector:
    matchLabels:
      app: micro-recipient
  template:
    metadata:
      labels:
        project: pdp
        app: micro-recipient
    spec:
      containers:
        - name: micro-recipient
          image: olehfliurkevych/micro-recipient:0.0.1
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: service-port
            failureThreshold: 3
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 10
          ports:
            - name: service-port
              containerPort: 8081
