kubernetes/eureka.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eureka-deployment
  labels:
    project: pdp
    app: eureka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eureka
  template:
    metadata:
      labels:
        project: pdp
        app: eureka
    spec:
      containers:
        - name: eureka
          image: olehfliurkevych/eureka:0.0.1
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: service-port
            failureThreshold: 3
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 10
          ports:
            - name: service-port
              containerPort: 8761

---
apiVersion: v1
kind: Service
metadata:
  name: eureka-service
  labels:
    project: pdp
    app: eureka
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8761
      targetPort: 8761
  selector:
    app: eureka
