kubernetes/micro-collector-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: micro-collector-service
spec:
  selector:
    app: micro-collector
  ports:
    - targetPort: 8080
      port: 8080
      protocol: TCP
  type: NodePort
