kubernetes/micro-collector.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: micro-collector-deployment
  labels:
    project: pdp
    app: micro-collector
spec:
  replicas: 1
  selector:
    matchLabels:
      app: micro-collector
  template:
    metadata:
      labels:
        project: pdp
        app: micro-collector
    spec:
      containers:
        - name: micro-collector
          image: olehfliurkevych/micro-collector:0.0.1
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: service-port
            failureThreshold: 3
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 10
          ports:
            - name: service-port
              containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: micro-collector-service
  labels:
    project: pdp
    app: micro-collector
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: micro-collector
