kubernetes/micro-recipient-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: micro-recipient-service
spec:
  selector:
    app: micro-recipient
  ports:
    - targetPort: 8081
      port: 8081
      protocol: TCP
  type: NodePort
