kubernetes/micro-recipient.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: micro-recipient-deployment
  labels:
    project: pdp
    app: micro-recipient
spec:
  replicas: 1
  selector:
    matchLabels:
      app: micro-recipient
  template:
    metadata:
      labels:
        project: pdp
        app: micro-recipient
    spec:
      containers:
        - name: micro-recipient
          image: olehfliurkevych/micro-recipient:0.0.1
#          imagePullPolicy: Never
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: service-port
            failureThreshold: 3
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 10
          ports:
            - name: service-port
              containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: micro-recipient-service
  labels:
    project: pdp
    app: micro-recipient
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
  selector:
    app: micro-recipient
