kubernetes/micro-sender.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: micro-sender-deployment
  labels:
    project: pdp
    app: micro-sender
spec:
  replicas: 1
  selector:
    matchLabels:
      app: micro-sender
  template:
    metadata:
      labels:
        project: pdp
        app: micro-sender
    spec:
      containers:
        - name: micro-sender
          image: olehfliurkevych/micro-sender:0.0.1
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: service-port
            failureThreshold: 3
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 10
          ports:
            - name: service-port
              containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: micro-sender-service
  labels:
    project: pdp
    app: micro-sender
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
  selector:
    app: micro-sender
