kubernetes/rabbitmq.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-deployment
  labels:
    project: pdp
    app: rabbitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        project: pdp
        app: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3-management
          ports:
            - containerPort: 5672
            - containerPort: 15672

---

apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-service
  labels:
    project: pdp
    app: rabbitmq
spec:
  type: ClusterIP
  ports:
    - name: queue
      protocol: TCP
      port: 5672
      targetPort: 5672
    - name: management
      protocol: TCP
      port: 15672
      targetPort: 15672
  selector:
    app: rabbitmq
