kubernetes/kubectl-recipient-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: kubectl-recipient
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/kubectl-recipient: "true"
  podSelector:
    matchLabels:
      io.kompose.network/kubectl-recipient: "true"
