kubernetes/kubectl-sender-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: kubectl-sender
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/kubectl-sender: "true"
  podSelector:
    matchLabels:
      io.kompose.network/kubectl-sender: "true"
